# bengt

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: budget.py  config.py  indexer.py  main.py  scheduler.py  scheduler_runner.py  titling.py  uploads.py  ws_manager.py
backend/app/agent/: __init__.py  events.py  loop.py  mock_tools.py  scheduler_tools.py  tools.py  vault_tools.py  web_tools.py
backend/app/api/: audit.py  auth.py  chat.py  conversations.py  deps.py  models.py  scheduler.py  todos.py  uploads.py  vault.py
backend/app/db/: __init__.py  audit.py  conversations.py  migrations.py  models.py
backend/app/llm/: __init__.py  factory.py  openai_provider.py  pricing.py  types.py
backend/app/vault/: __init__.py  paths.py  service.py  todos.py
backend/tests/: conftest.py  test_agent.py  test_agent_integration.py  test_api.py  test_api_scheduler.py  test_api_todos.py  test_api_uploads.py  test_audit_budget.py  test_auto_title.py  test_chat_ws.py  test_conversations.py  test_indexer.py  test_llm.py  test_llm_integration.py  test_multi_model.py  test_paths.py  test_scheduler_runner.py  test_scheduler_tools.py  test_todos.py  test_uploads.py  test_vault.py  test_vault_tools.py  test_web_tools.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BottomNav.tsx  ChatInput.tsx  ChatView.tsx  Editor.tsx  FAB.tsx  Markdown.tsx  MessageBubble.tsx  ProtectedRoute.tsx  Sidebar.tsx  StreamingMessage.tsx  TodoModal.tsx  TodoRow.tsx  ToolInvocation.tsx  VaultTree.tsx
frontend/src/hooks/: useAudit.ts  useAuth.ts  useChatStream.ts  useConversations.ts  useModels.ts  useScheduler.ts  useTodos.ts  useUploads.ts  useVault.ts
frontend/src/routes/: AppShell.tsx  AuditPage.tsx  ConversationPage.tsx  Home.tsx  LoginPage.tsx  ScheduledPage.tsx  TodosPage.tsx  VaultPage.tsx
