[project]
name = "backend"
version = "0.1.0"
description = "Personal AI assistant backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "gitpython>=3.1.43",
    "chromadb>=0.5",
    "openai>=1.55",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
