[project]
name = "backend"
version = "0.1.0"
description = "Personal AI assistant backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "gitpython>=3.1.43",
    "chromadb>=0.5",
    "openai>=1.55",
    "apscheduler>=3.10,<4.0",
    "sqlalchemy>=2.0",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "ddgs>=9.0",
    "trafilatura>=1.12",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: real external API call; opt in via 'pytest -m integration'",
]
# Default run skips integration tests. Override with `pytest -m integration`.
addopts = ["-m", "not integration"]
